# EasyWork

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  COMPLEX_TYPES.md  DOCUMENTATION.md  PLANS.md  QUICKSTART.md  README.md  README_CN.md  TYPE_SYSTEM_QUICKREF.md  TYPE_SYSTEM_STATUS.md  TYPE_SYSTEM_SUMMARY.md  check_deps.cmake  design_doc.md  readme_for_llm.md  update_map.md
apps/: easywork_run.cpp
doc/: build.md  cross_build.md  error_codes.md  ir_schema.md  issue_review.md  runtime_logging.md
doc/cn/: ast_control_flow_design_cn.md  runtime_core_cn.md  runtime_registry_cn.md  runtime_types_cn.md
doc/en/: ast_control_flow_design.md  runtime_core.md  runtime_registry.md  runtime_types.md
examples/: runtime_minimal.cpp
python/: requirements.txt
python/easywork/: __init__.py  ast_transform.py
scripts/: check_production_artifacts.sh  check_production_graph.py  migrate_graph_ir_v1.py
scripts/ci/: cross_gate.sh  dev_gate.sh  prod_gate.sh
src/bindings/: bindings.cpp
src/modules/: control_nodes.h  example_typed_nodes.h  module_registry.h
src/runtime/: core.h  core_tbb.h  graph_build.cpp  macros.h  modules.h  node_registry.h  ops_opencv.h  test_invoker.cpp  type_system.cpp  type_system.h
src/runtime/core/: base_node.h  core.h  dispatch_unit.h  error_codes.h  execution_graph.h  executor.h  graph_build.h  ids.h  logger.h  method_reflection.h  node.h
src/runtime/memory/: frame.h
src/runtime/module/: camera_source.h  canny_filter.h  example_typed_nodes.h  null_sink.h  pyfunc_node.h  video_writer_sink.h
src/runtime/registry/: macros.h  node_registry.h
src/runtime/types/: type_converter.h  type_system.h  type_traits.h
tests/: test_ast_control_flow.py  test_complete_type_system.py  test_complex_types.py  test_eager_and_trace_mix.py  test_error_codes.py  test_error_policy.py  test_heterogeneous_methods.py  test_phase1.py  test_phase2_cam.py  test_phase2_class.py  test_phase2_hybrid.py  test_python_node.py
tests/cpp/: graph_build_test.cpp  runtime_contract_test.cpp
toolchains/: aarch64-generic.cmake
